--- a/css/style.scss
+++ b/css/style.scss
@@ -289,7 +289,7 @@ header {
 
 .my-services {
     background-color: var(--clr-dark);
-    background-image: url(../img/services-bg.jpg);
+    background-image: url(../img/lyricparser-background.png);
     background-size: cover;
     /* background-blend-mode: multiply; */
     color: var(--clr-light);
@@ -396,8 +396,16 @@ header {
 }
 
 .portfolio__item {
+    transition: opacity .25s ease-in;
     background: var(--clr-accent);
     overflow: hidden;
+
+    opacity: .25;
+
+    &:focus,
+    &:hover {
+        opacity: 1;
+    }
 }
 
 .portfolio__img {
@@ -414,8 +422,15 @@ header {
 .portfolio__img:hover,
 .portfolio__item:focus .portfolio__img {
     transform: scale(1.2);
-    opacity: .75;
+
 }
+
+.portfolio--container:not(:focus-within):not(:hover) {
+    .portfolio__item {
+        opacity: 1;
+    }
+}
+
 
 /* Top */
 
@@ -435,7 +450,7 @@ header {
 .top-button--hide {
     visibility: hidden;
     opacity: 0;
-    transition: visibility 0s .25s, opacity .25s ease-out;
+    transition: visibility .25s, opacity .25s ease-out;
 }
 
 /* Footer */
