--- a/css/style.scss
+++ b/css/style.scss
@@ -6,7 +6,7 @@
 
 :root {
     --ff-primary: 'Source Sans Pro', sans-serif;
-    --ff-secondary: 'Source Sans Pro'monospace;
+    --ff-secondary: 'PT Sans', monospace;
 
     --fw-reg: 300;
     --fw-bold: 900;
@@ -106,6 +106,7 @@ h3 {
 
 .section__title {
     margin-bottom: .25em;
+    font-family: var(--ff-secondary);
 }
 
 .section__title--intro {
@@ -291,7 +292,7 @@ header {
     background-color: var(--clr-dark);
     background-image: url(../img/lyricparser-background.png);
     background-size: cover;
-    /* background-blend-mode: multiply; */
+    background-blend-mode: overlay;
     color: var(--clr-light);
     text-align: center;
 }
@@ -301,35 +302,34 @@ header {
     position: relative;
 }
 
-.section__title--services::after {
-    content: '';
-    display: block;
-    width: 2em;
-    height: 1px;
-    margin: 0.5em auto 1em;
-    background: var(--clr-light);
-    opacity: 0.25;
+
+.hexagon {
+    background-image: url(../img/hexagon.svg);
+    background-size: contain;
+    display: inline-flex;
+    width: 200px;
+    height: 200px;
+    justify-items: center;
+    align-content: center;
+    text-align: center;
 }
 
-.services {
-    margin-bottom: 4em;
+.service__description {
+    font-family: var(--ff-secondary);
 }
 
-.service {
-    max-width: 500px;
-    margin: 0 auto;
+.hexagon i {
+    color: var(--clr-light);
+    margin: auto auto;
 }
 
 @media (min-width: 800px) {
     .services {
         display: flex;
-        max-width: 1000px;
+        max-width: calc(600px + 6rem);
+        gap: 3rem;
         margin-left: auto;
         margin-right: auto;
-    }
-
-    .services+.service {
-        margin-left: 2em;
     }
 }
 
