--- a/css/style.css
+++ b/css/style.css
@@ -277,6 +277,57 @@ header {
   bottom: 6px;
 }
 
+@media (min-width: 600px) {
+  .nav-toggle {
+    visibility: hidden;
+  }
+  .nav {
+    bottom: auto;
+    height: 4%;
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    border-bottom: 4px solid var(--clr-accent);
+  }
+  .nav__list {
+    list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: initial;
+    -webkit-box-direction: initial;
+        -ms-flex-direction: initial;
+            flex-direction: initial;
+    -webkit-box-pack: initial;
+        -ms-flex-pack: initial;
+            justify-content: initial;
+  }
+  .nav__item {
+    margin-left: 2em;
+  }
+  .nav__link {
+    font-family: var(--ff-secondary);
+    font-weight: var(--fw-reg);
+    font-size: var(--fs-h3);
+  }
+}
+
+/* Scrollbar */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #2B2D2D;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #555757;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #5F6364;
+}
+
 /* Intro Section */
 .intro {
   position: relative;
