--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
   --fw-bold: 900;
   --clr-light: #D5D7CC;
   --clr-dark: #333333;
+  --clr-darker: #111;
   --clr-accent: #F69277;
   --fs-h1: 3rem;
   --fs-h2: 2.25rem;
@@ -59,7 +60,7 @@ strong {
 
 :focus {
   outline: 3px solid var(--clr-accent);
-  outline-offset: 3px;
+  outline-offset: 2px;
 }
 
 /* Buttons */
@@ -285,7 +286,7 @@ header {
     bottom: auto;
     -webkit-transform: translateX(0);
             transform: translateX(0);
-    border-bottom: 4px solid var(--clr-accent);
+    border-bottom: 5px solid var(--clr-accent);
   }
   .nav__list {
     list-style: none;
@@ -307,6 +308,29 @@ header {
     font-family: var(--ff-secondary);
     font-weight: var(--fw-reg);
     font-size: var(--fs-h3);
+  }
+  .nav__item a {
+    display: block;
+    text-align: center;
+  }
+  .nav__item a::before {
+    content: "";
+    height: 3px;
+    display: block;
+    border-top: 3px solid var(--clr-accent);
+    -webkit-transition: .5s all ease-out;
+    transition: .5s all ease-out;
+    -webkit-transform: scaleX(0);
+            transform: scaleX(0);
+  }
+  .nav__item a:focus {
+    outline: none;
+  }
+  .active a::before {
+    content: "";
+    display: block;
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
   }
 }
 
@@ -478,6 +502,25 @@ header {
   text-align: center;
 }
 
+.my-work::before {
+  content: "";
+  position: absolute;
+  width: 0;
+  left: 0;
+  margin-top: -5em;
+  border-right: 100px solid transparent;
+  border-top: 100px solid var(--clr-light);
+}
+
+.my-work::after {
+  content: "";
+  position: absolute;
+  width: 0;
+  right: 0;
+  border-left: 100px solid transparent;
+  border-bottom: 100px solid var(--clr-darker);
+}
+
 .portfolio {
   width: 100%;
   display: -webkit-box;
@@ -486,6 +529,7 @@ header {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding-bottom: 10rem;
 }
 
 .portfolio--container {
@@ -553,7 +597,7 @@ header {
 
 /* Footer */
 .footer {
-  background: #111;
+  background: var(--clr-darker);
   color: var(--clr-accent);
   text-align: center;
   padding: 2.5em 0;
