--- a/css/style.scss
+++ b/css/style.scss
@@ -170,7 +170,6 @@ header {
     left: 0;
     right: 0;
     z-index: 100;
-
     transform: translateX(100%);
     transition: transform 250ms cubic-bezier(.5, 0, .5, 1);
 }
@@ -260,11 +259,36 @@ header {
 }
 
 @media (min-width: 600px) {
+    .nav::before {
+        content: "";
+        background-image: url(../img/hexagon-logo.png);
+        background-size: cover;
+        position: absolute;
+        left: 0;
+        height: 100%;
+        width: 50px;
+        opacity: .4;
+    }
+
+    .nav::after {
+        content: "";
+        background-image: url(../img/hexagon-logo.png);
+        background-size: cover;
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: 100%;
+        width: 50px;
+        opacity: .4;
+        transform: scaleX(-1);
+    }
+
     .nav-toggle {
         visibility: hidden;
     }
 
     .nav {
+        padding-left: 4rem;
         bottom: auto;
         transform: translateX(0);
         border-bottom: 5px solid var(--clr-accent);
