--- a/css/style.scss
+++ b/css/style.scss
@@ -41,6 +41,7 @@ html {
 }
 
 body {
+    overflow: visible;
     background: var(--clr-light);
     color: var(--clr-dark);
     margin: 0;
@@ -637,8 +638,128 @@ header {
     font-family: var(--ff-secondary);
 }
 
-.portfolio-item-individual p {
+.portfolio-item-individual__sub {
     max-width: 600px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.portfolio-item-individual__gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(480px, 1fr));
+}
+
+.view-site {
+    margin-right: 1em;
+}
+
+/* Slideshow */
+
+.slideshow {
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+.slideshow:hover .slideshow__button {
+    opacity: 1;
+}
+
+.slideshow__item {
+    grid-row-start: 1;
+    grid-column-start: 1;
+    visibility: hidden;
+    // transform: translateY(50%);
+    transition: .25s all ease-in-out;
+    opacity: 0;
+}
+
+.slideshow__item.active {
+    visibility: visible;
+    opacity: 1;
+    // transform: translateY(0);
+}
+
+.slideshow__button {
+    position: absolute;
+    top: 50%;
+
+    outline: none;
+    border: none;
+
+    background: var(--clr-dark);
+    color: var(--clr-light);
+    opacity: 0;
+    transition: .25s all ease-in-out;
+}
+
+.slideshow__button:hover {
+    background-color: var(--clr-accent);
+}
+
+.slideshow__button:active {
+    color: #c4735d;
+}
+
+.slideshow__button--right {
+    right: 0;
+}
+
+/* Modal */
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background: rgba(0, 0, 0, .6);
+    animation-name: fadeIn;
+    animation-duration: .5s;
+
+    justify-content: center;
+    align-items: center;
+}
+
+.modal__content {
+    position: fixed;
+}
+
+.modal__close-button {
+    position: fixed;
+    right: 1em;
+    top: 1em;
+    padding: 0;
+
+    border: none;
+
+    background: transparent;
+    color: var(--clr-light);
+}
+
+.modal__close-button:hover {
+    color: var(--clr-accent);
+}
+
+.modal__close-button:focus {
+    outline: 3px solid var(--clr-accent);
+}
+
+.modal-open {
+    overflow: hidden;
+}
+
+/* Animation */
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
