--- a/css/style.css
+++ b/css/style.css
@@ -406,9 +406,12 @@ header {
     -ms-grid-row-span: 2;
     -ms-grid-column: 1;
     grid-area: img;
-    min-width: 250px;
+    min-width: 150px;
     position: relative;
     z-index: 2;
+  }
+  .section__title--intro {
+    font-size: var(--fs-h2);
   }
   .section__subtitle--intro {
     -ms-flex-item-align: start;
