Fix modal image scaling on different screen sizes

--- a/css/style.css
+++ b/css/style.css
@@ -773,6 +773,14 @@ header {
 
 .modal__content {
   position: fixed;
+  max-height: 80%;
+  max-width: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .modal__close-button {
