--- a/css/style.scss
+++ b/css/style.scss
@@ -14,10 +14,13 @@
     --fw-reg: 300;
     --fw-bold: 900;
 
-    --clr-light: #D5D7CC;
+
+    --clr-light: #fff5e1;
+    --clr-light-secondary: #fdf3de;
     --clr-dark: #333333;
     --clr-darker: #111;
-    --clr-accent: #F69277;
+    --clr-accent: #E5957A;
+    --clr-accent-secondary: #80003A;
 
     --fs-h1: 3rem;
     --fs-h2: 2.25rem;
@@ -66,6 +69,26 @@ strong {
 :focus {
     outline: 3px solid var(--clr-accent);
     outline-offset: 2px;
+}
+
+/* Borders */
+
+.border-gradient-top {
+    border-top: 1px solid;
+    border-image-slice: 1;
+    border-image-source:
+        linear-gradient(to left,
+            var(--clr-accent-secondary),
+            var(--clr-accent));
+}
+
+.border-gradient-bottom {
+    border-bottom: 1px solid;
+    border-image-slice: 1;
+    border-image-source:
+        linear-gradient(to left,
+            var(--clr-accent-secondary),
+            var(--clr-accent));
 }
 
 /* Buttons */
@@ -180,7 +203,7 @@ header {
     display: flex;
     height: 100%;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     margin: 0;
     padding: 0;
@@ -190,7 +213,19 @@ header {
     color: inherit;
     font-weight: var(--fw-bold);
     font-size: var(--fs-h2);
+    font-family: var(--ff-secondary);
     text-decoration: none;
+}
+
+.nav__item {
+    height: 15%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav__item:first-child {
+    border-top: 0;
 }
 
 .nav__link:hover {
@@ -292,7 +327,7 @@ header {
         padding-left: 4rem;
         bottom: auto;
         transform: translateX(0);
-        border-bottom: 5px solid var(--clr-accent);
+        border-width: 5px;
     }
 
     .nav__list {
@@ -304,6 +339,7 @@ header {
 
     .nav__item {
         margin-left: 2em;
+        border-top: 0;
     }
 
     .nav__link {
@@ -323,6 +359,7 @@ header {
         height: 3px;
         display: block;
         border-top: 3px solid var(--clr-accent);
+
         transition: .5s all ease-out;
         transform: scaleX(0);
     }
@@ -625,9 +662,6 @@ header {
 
 .social-list__item {
     margin: 0 .5em;
-}
-
-.social-list__link {
     padding-right: .5em;
 }
 
