--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ body {
   background: var(--clr-light);
   color: var(--clr-dark);
   margin: 0;
-  font-family: var(--ff-primary);
+  font-family: var(--ff-secondary);
   font-size: var(--fs-body);
   line-height: 1.6;
 }
@@ -484,10 +484,12 @@ header {
   display: inline-flex;
   width: 200px;
   height: 200px;
-  justify-items: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .service__description {
@@ -496,7 +498,6 @@ header {
 
 .hexagon i {
   color: var(--clr-light);
-  margin: auto auto;
 }
 
 @media (min-width: 800px) {
@@ -559,30 +560,35 @@ header {
 
 /* My Work Section */
 .my-work {
+  position: relative;
   background-color: var(--clr-dark);
   color: var(--clr-light);
   text-align: center;
+  padding-top: 10em;
 }
 
 .my-work::before {
   content: "";
   position: absolute;
-  width: 0;
   left: 0;
-  margin-top: -5em;
-  border-right: 100px solid transparent;
-  border-top: 100px solid var(--clr-light);
+  top: -1px;
+  width: 100%;
+  height: 5em;
+  background: var(--clr-light);
+  -webkit-clip-path: polygon(100% 0, 50% 100%, 0 0);
+          clip-path: polygon(100% 0, 50% 100%, 0 0);
 }
 
-.my-work::after {
-  content: "";
-  position: absolute;
-  width: 0;
-  right: 0;
-  border-left: 100px solid transparent;
-  border-bottom: 100px solid var(--clr-darker);
-}
-
+/* .my-work::after {
+    content: "";
+    position: absolute;
+    bottom: -1px;
+    right: 0;
+    width: 5em;
+    height: 5em;
+    background: var(--clr-darker);
+    clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+} */
 .portfolio {
   width: 100%;
   display: -webkit-box;
@@ -597,8 +603,8 @@ header {
 .portfolio--container {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(360px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
+  -ms-grid-columns: (minmax(200px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
 .portfolio__item {
@@ -673,6 +679,8 @@ header {
 
 .footer__link {
   font-weight: var(--fw-bold);
+  font-family: var(--ff-secondary);
+  word-wrap: break-word;
 }
 
 .footer__link:hover,
