--- a/css/style.scss
+++ b/css/style.scss
@@ -48,7 +48,7 @@ body {
     background: var(--clr-light);
     color: var(--clr-dark);
     margin: 0;
-    font-family: var(--ff-primary);
+    font-family: var(--ff-secondary);
     font-size: var(--fs-body);
     line-height: 1.6;
 }
@@ -453,16 +453,14 @@ header {
     position: relative;
 }
 
-
 .hexagon {
     background-image: url(../img/hexagon.svg);
     background-size: contain;
     display: inline-flex;
     width: 200px;
     height: 200px;
-    justify-items: center;
-    align-content: center;
-    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
 .service__description {
@@ -471,7 +469,6 @@ header {
 
 .hexagon i {
     color: var(--clr-light);
-    margin: auto auto;
 }
 
 @media (min-width: 800px) {
@@ -530,29 +527,34 @@ header {
 /* My Work Section */
 
 .my-work {
+    position: relative;
     background-color: var(--clr-dark);
     color: var(--clr-light);
     text-align: center;
+    padding-top: 10em;
 }
 
 .my-work::before {
     content: "";
     position: absolute;
-    width: 0;
     left: 0;
-    margin-top: -5em;
-    border-right: 100px solid transparent;
-    border-top: 100px solid var(--clr-light);
+    top: -1px;
+    width: 100%;
+    height: 5em;
+    background: var(--clr-light);
+    clip-path: polygon(100% 0, 50% 100%, 0 0);
 }
 
-.my-work::after {
+/* .my-work::after {
     content: "";
     position: absolute;
-    width: 0;
+    bottom: -1px;
     right: 0;
-    border-left: 100px solid transparent;
-    border-bottom: 100px solid var(--clr-darker);
-}
+    width: 5em;
+    height: 5em;
+    background: var(--clr-darker);
+    clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+} */
 
 .portfolio {
     width: 100%;
@@ -563,7 +565,7 @@ header {
 
 .portfolio--container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
 .portfolio__item {
@@ -641,6 +643,8 @@ header {
 
 .footer__link {
     font-weight: var(--fw-bold);
+    font-family: var(--ff-secondary);
+    word-wrap: break-word;
 }
 
 .footer__link:hover,
@@ -664,7 +668,6 @@ header {
     margin: 0 .5em;
     padding-right: .5em;
 }
-
 
 /* Individual portfolio item styles */
 
