Add aria-label where missing

--- a/css/style.css
+++ b/css/style.css
@@ -882,8 +882,8 @@ header {
 
 .modal__content {
   position: fixed;
-  max-height: 80%;
   max-width: 80%;
+  height: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
