--- a/css/style.css
+++ b/css/style.css
@@ -514,8 +514,15 @@ header {
 
 /* About Section */
 .about-me {
-  max-width: 1000px;
+  position: relative;
+  padding-bottom: 10em;
+  width: 100%;
+}
+
+.about-me__content {
+  position: relative;
   margin: 0 auto;
+  max-width: 1000px;
 }
 
 .about-me__img {
@@ -523,8 +530,20 @@ header {
           box-shadow: var(--bs);
 }
 
+.about-me::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 5em;
+  background: var(--clr-dark);
+  -webkit-clip-path: polygon(50% 50%, 100% 0, 100% 100%, 0 100%, 0 0);
+          clip-path: polygon(50% 50%, 100% 0, 100% 100%, 0 100%, 0 0);
+}
+
 @media (min-width: 600px) {
-  .about-me {
+  .about-me__content {
     display: -ms-grid;
     display: grid;
     -ms-grid-columns: 1fr 200px;
@@ -554,7 +573,6 @@ header {
     -ms-grid-column: 2;
     grid-area: img;
     position: relative;
-    z-index: 2;
   }
 }
 
@@ -564,19 +582,6 @@ header {
   background-color: var(--clr-dark);
   color: var(--clr-light);
   text-align: center;
-  padding-top: 10em;
-}
-
-.my-work::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: -1px;
-  width: 100%;
-  height: 5em;
-  background: var(--clr-light);
-  -webkit-clip-path: polygon(100% 0, 50% 100%, 0 0);
-          clip-path: polygon(100% 0, 50% 100%, 0 0);
 }
 
 /* .my-work::after {
@@ -683,6 +688,7 @@ header {
   bottom: 20px;
   right: 20px;
   visibility: hidden;
+  z-index: 1;
 }
 
 .top-button--show {
