--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=PT+Sans&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap");
-*,
-*::before,
-*::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
+/* table of contents
 
+    1. global styles
+
+    2. typography
+    
+    3. layout
+
+    4. components
+
+    5. animations
+
+*/
+/*  ==========
+    variables
+    ============    */
 :root {
   --ff-primary: 'Source Sans Pro', sans-serif;
   --ff-secondary: 'PT Sans', monospace;
@@ -22,7 +31,7 @@
   --fs-h2: 2.25rem;
   --fs-h3: 1.25rem;
   --fs-body: 1rem;
-  --bs: 0.25em 0.25em 0.75em rgba(0, 0, 0, .25), 0.125em 0.125em 0.25em rgba(0, 0, 0, .15);
+  --bs: 0.125em 0.125em 0.25em rgba(0, 0, 0, .15);
 }
 
 @media (min-width: 800px) {
@@ -34,12 +43,23 @@
   }
 }
 
+/*  ==========
+    1. global styles
+    ============    */
+*,
+*::before,
+*::after {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 html {
   scroll-behavior: smooth;
 }
 
 body {
   overflow: visible;
+  overflow-x: hidden;
   background: var(--clr-light);
   color: var(--clr-dark);
   margin: 0;
@@ -48,25 +68,66 @@ body {
   line-height: 1.6;
 }
 
-section {
-  padding: 5em 2em;
+:focus {
+  outline: 3px solid var(--clr-accent);
+  outline-offset: 2px;
 }
 
-img {
-  display: block;
-  max-width: 100%;
+/*  ==========
+    2. typography
+    ============    */
+h1,
+h2,
+h3 {
+  line-height: 1;
+  margin: 0;
+}
+
+h1 {
+  font-size: var(--fs-h1);
+}
+
+h2 {
+  font-size: var(--fs-h2);
+}
+
+h3 {
+  font-size: var(--fs-h3);
 }
 
 strong {
   font-weight: var(--fw-bold);
 }
 
-:focus {
-  outline: 3px solid var(--clr-accent);
-  outline-offset: 2px;
+/*  ==========
+    3. layout
+    ============    */
+header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 1em;
 }
 
-/* Borders */
+section {
+  padding: 5em 2em;
+}
+
+.footer {
+  background: var(--clr-darker);
+  color: var(--clr-accent);
+  text-align: center;
+  padding: 2.5em 0;
+  font-size: var(--fs-h3);
+}
+
+/*  ==========
+    4. components
+    ============    */
+/*  4.1 borders   */
 .border-gradient-top {
   border-top: 1px solid;
   border-image-slice: 1;
@@ -79,7 +140,11 @@ strong {
   border-image-source: linear-gradient(to left, var(--clr-accent-secondary), var(--clr-accent));
 }
 
-/* Buttons */
+/*  4.2 buttons     */
+button {
+  cursor: pointer;
+}
+
 .btn {
   display: inline-block;
   padding: .5em 2.5em;
@@ -111,24 +176,10 @@ strong {
   margin-left: 5px;
 }
 
-/* Typography */
-h1,
-h2,
-h3 {
-  line-height: 1;
-  margin: 0;
-}
-
-h1 {
-  font-size: var(--fs-h1);
-}
-
-h2 {
-  font-size: var(--fs-h2);
-}
-
-h3 {
-  font-size: var(--fs-h3);
+/*  4.3 images      */
+img {
+  display: block;
+  max-width: 100%;
 }
 
 .section__title {
@@ -161,17 +212,6 @@ h3 {
   color: var(--clr-accent);
   font-weight: var(--fw-bold);
   margin-bottom: 2em;
-}
-
-/* Header */
-header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding: 1em;
 }
 
 .logo {
@@ -344,7 +384,7 @@ header {
     bottom: auto;
     -webkit-transform: translateX(0);
             transform: translateX(0);
-    border-width: 5px;
+    border-width: 2px;
   }
   .nav__list {
     list-style: none;
@@ -416,8 +456,8 @@ header {
 }
 
 .intro__img {
-  -webkit-box-shadow: var(--bs);
-          box-shadow: var(--bs);
+  -webkit-filter: drop-shadow(var(--bs));
+          filter: drop-shadow(var(--bs));
 }
 
 @media (min-width: 600px) {
@@ -530,18 +570,16 @@ header {
           box-shadow: var(--bs);
 }
 
-.about-me::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 5em;
-  background: var(--clr-dark);
-  -webkit-clip-path: polygon(50% 50%, 100% 0, 100% 100%, 0 100%, 0 0);
-          clip-path: polygon(50% 50%, 100% 0, 100% 100%, 0 100%, 0 0);
-}
-
+/* .about-me::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 5em;
+    background: var(--clr-dark);
+    clip-path: polygon(50% 50%, 100% 0, 100% 100%, 0 100%, 0 0);
+} */
 @media (min-width: 600px) {
   .about-me__content {
     display: -ms-grid;
@@ -576,15 +614,15 @@ header {
   }
 }
 
-/* My Work Section */
-.my-work {
+/* Projects Section */
+.projects {
   position: relative;
   background-color: var(--clr-dark);
   color: var(--clr-light);
   text-align: center;
 }
 
-/* .my-work::after {
+/* .projects::after {
     content: "";
     position: absolute;
     bottom: -1px;
@@ -706,14 +744,6 @@ header {
 }
 
 /* Footer */
-.footer {
-  background: var(--clr-darker);
-  color: var(--clr-accent);
-  text-align: center;
-  padding: 2.5em 0;
-  font-size: var(--fs-h3);
-}
-
 .footer a {
   color: inherit;
   text-decoration: none;
@@ -920,7 +950,35 @@ header {
   overflow: hidden;
 }
 
-/* Animation */
+/*  ==========
+    5. animations
+    ============    */
+.from-left,
+.from-right {
+  opacity: 0;
+  -webkit-transition: opacity 150ms ease-in, -webkit-transform 300ms ease-in;
+  transition: opacity 150ms ease-in, -webkit-transform 300ms ease-in;
+  transition: opacity 150ms ease-in, transform 300ms ease-in;
+  transition: opacity 150ms ease-in, transform 300ms ease-in, -webkit-transform 300ms ease-in;
+}
+
+.from-left.appear,
+.from-right.appear {
+  opacity: 1;
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.from-left {
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+.from-right {
+  -webkit-transform: translateX(50%);
+          transform: translateX(50%);
+}
+
 @-webkit-keyframes fadeIn {
   from {
     opacity: 0;
@@ -929,6 +987,7 @@ header {
     opacity: 1;
   }
 }
+
 @keyframes fadeIn {
   from {
     opacity: 0;
