--- a/css/style.scss
+++ b/css/style.scss
@@ -457,14 +457,15 @@ img {
         margin-bottom: 0 auto;
         column-gap: 1em;
         grid-template-areas:
-            "img title"
-            "img subtitle";
+            "img img title"
+            "img img subtitle";
         grid-template-columns: min-content max-content;
     }
 
     .intro__img {
         grid-area: img;
         min-width: 150px;
+        max-width: 320px;
         position: relative;
         z-index: 2;
     }
@@ -475,7 +476,7 @@ img {
 
     .section__subtitle--intro {
         align-self: start;
-        grid-column: -1 / 1;
+        grid-column: 1 / 7;
         grid-row: 2;
         text-align: right;
         position: relative;
