Add filter to project background images

--- a/css/style.scss
+++ b/css/style.scss
@@ -784,7 +784,7 @@ img {
 }
 
 .portfolio-item-individual__background{
-    filter: brightness(50%);
+    filter: brightness(30%) contrast(70%);
 }
 
 .portfolio-item-individual__gallery {
