--- a/css/style.scss
+++ b/css/style.scss
@@ -488,12 +488,29 @@ img {
 /* Services Section */
 
 .my-services {
+    position: relative;
+    color: var(--clr-light);
+    text-align: center;
+}
+
+.my-services::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
     background-color: var(--clr-dark);
     background-image: url(../img/lyricparser-background.png);
     background-size: cover;
     background-blend-mode: overlay;
-    color: var(--clr-light);
-    text-align: center;
+    background-position: 60%;
+    filter: brightness(50%);
+}
+
+.services{
+    position: relative;
 }
 
 .section__title--services {
