--- a/css/style.css
+++ b/css/style.css
@@ -899,7 +899,7 @@ img {
   opacity: 1;
 }
 
-.slideshow__button {
+.modal__slideshow__button, .slideshow__button {
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -913,12 +913,16 @@ img {
   transition: .25s all ease-in-out;
 }
 
-.slideshow__button:hover {
+.modal__slideshow__button:hover, .slideshow__button:hover {
   background-color: var(--clr-accent);
 }
 
-.slideshow__button:active {
+.modal__slideshow__button:active, .slideshow__button:active {
   color: #c4735d;
+}
+
+.slideshow__button--left {
+  left: 0;
 }
 
 .slideshow__button--right {
@@ -946,6 +950,10 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.modal__content:hover .modal__slideshow__button {
+  opacity: 1;
 }
 
 .modal__content {
